// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContextMenu /> Given the component was mounted to the DOM should match snapshot 1`] = `
<ContextMenu
  classes={
    Object {
      "button": "",
      "container": "",
    }
  }
>
  <div
    className="css-13azwyo"
    data-test-id="contextMenu"
  >
    <button
      className="css-d6h5ju"
      onClick={[Function]}
    >
      <MoreVert>
        <Icon
          className=""
          color={null}
          content="<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z\\"/>"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb "
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z\\"/>",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </MoreVert>
    </button>
    <Component
      isOpened={false}
    />
  </div>
</ContextMenu>
`;

exports[`<ContextMenu /> Snapshot test should match snapshot 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo"
  data-test-id="contextMenu"
>
  <button
    aria-hidden={true}
    className="css-1jsppqd"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <MoreVert />
  </button>
  <ReduxConnectedPortal
    isOpened={true}
  >
    <div
      className="css-dvvqn2"
    >
      <Backdrop
        className=""
        color="#000"
        duration={200}
        isVisible={true}
        level={0}
        lockBodyScroll={true}
        onClick={[Function]}
        opacity={0}
      />
      <Position
        offset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
      >
        <div
          className="css-1uoznzv"
        >
          <Item
            autoClose={true}
            className="menu-active-item"
            closeMenu={[Function]}
            disabled={false}
            key=".0"
            onClick={[MockFunction]}
          >
            Item A
          </Item>
          <Item
            autoClose={true}
            className="menu-active-item"
            closeMenu={[Function]}
            disabled={false}
            key=".1"
            onClick={[MockFunction]}
          >
            Item B
          </Item>
        </div>
      </Position>
    </div>
  </ReduxConnectedPortal>
</div>
`;

exports[`<ContextMenu /> Snapshot test should match snapshot without toggle 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo"
  data-test-id="contextMenu"
>
  <ReduxConnectedPortal
    isOpened={true}
  >
    <div
      className="css-dvvqn2"
    >
      <Backdrop
        className=""
        color="#000"
        duration={200}
        isVisible={true}
        level={0}
        lockBodyScroll={true}
        onClick={[Function]}
        opacity={0}
      />
      <Position
        offset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
      >
        <div
          className="css-1uoznzv"
        >
          <Item
            autoClose={true}
            className="menu-active-item"
            closeMenu={[Function]}
            disabled={false}
            key=".0"
            onClick={[MockFunction]}
          >
            Item A
          </Item>
        </div>
      </Position>
    </div>
  </ReduxConnectedPortal>
</div>
`;
